force-app/main/default/objects/Seal__c/Seal__c.object-meta.xml
<CustomObject>
    <label>捺印管理</label>
    <nameField>
        <displayFormat>SE-{000000000}</displayFormat>
        <label>捺印管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>