force-app/main/default/objects/Seal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>捺印管理 (管理会社ID)</relationshipLabel>
    <relationshipName>SealApplicationAccountRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>