force-app/main/default/objects/Seal__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>Account__r.AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業ID</label>
    <type>Text</type>
</CustomField>