force-app/main/default/objects/Seal__c/fields/Amortisation__c.field-meta.xml
<CustomField>
    <fullName>Amortisation__c</fullName>
    <label>敷引</label>
    <length>255</length>
    <type>Text</type>
</CustomField>