force-app/main/default/objects/Seal__c/fields/ArchiveStorageRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveStorageRequestDate__c</fullName>
    <label>書庫保管依頼日</label>
    <type>Date</type>
</CustomField>