force-app/main/default/objects/Seal__c/fields/BeforeSignChecker__c.field-meta.xml
<CustomField>
    <fullName>BeforeSignChecker__c</fullName>
    <label>捺印前チェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>