force-app/main/default/objects/Seal__c/fields/BeforeSignCorrectionSignNoLeaks__c.field-meta.xml
<CustomField>
    <fullName>BeforeSignCorrectionSignNoLeaks__c</fullName>
    <label>捺印前_訂正印の漏れなし</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>