force-app/main/default/objects/Seal__c/fields/BeforeStorageCheckCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>BeforeStorageCheckCompletedDate__c</fullName>
    <label>保管前チェック完了日</label>
    <type>Date</type>
</CustomField>