force-app/main/default/objects/Seal__c/fields/BeforeStorageChecker__c.field-meta.xml
<CustomField>
    <fullName>BeforeStorageChecker__c</fullName>
    <label>保管前チェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>