force-app/main/default/objects/Seal__c/fields/BrrowerReceiptCollectDate__c.field-meta.xml
<CustomField>
    <fullName>BrrowerReceiptCollectDate__c</fullName>
    <label>借主控え回収日</label>
    <type>Date</type>
</CustomField>