force-app/main/default/objects/Seal__c/fields/Checker__c.field-meta.xml
<CustomField>
    <fullName>Checker__c</fullName>
    <label>チェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>