force-app/main/default/objects/Seal__c/fields/CommonChargeInput__c.field-meta.xml
<CustomField>
    <fullName>CommonChargeInput__c</fullName>
    <label>共益費入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>