force-app/main/default/objects/Seal__c/fields/ContentConfirmStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContentConfirmStartDate__c</fullName>
    <label>内容確認開始日</label>
    <type>Date</type>
</CustomField>