force-app/main/default/objects/Seal__c/fields/ContractAdjustmentItemsConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContractAdjustmentItemsConfirmDate__c</fullName>
    <label>契約調整事項確認日</label>
    <type>Date</type>
</CustomField>