force-app/main/default/objects/Seal__c/fields/ContractBeginningInput__c.field-meta.xml
<CustomField>
    <fullName>ContractBeginningInput__c</fullName>
    <label>契約始期入力</label>
    <type>Date</type>
</CustomField>