force-app/main/default/objects/Seal__c/fields/ContractConclusionDateCheck__c.field-meta.xml
<CustomField>
    <fullName>ContractConclusionDateCheck__c</fullName>
    <label>契約締結日チェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>