force-app/main/default/objects/Seal__c/fields/ContractCopyMail__c.field-meta.xml
<CustomField>
    <fullName>ContractCopyMail__c</fullName>
    <label>契約書(copy)mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>