force-app/main/default/objects/Seal__c/fields/ContractEndDateInput__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDateInput__c</fullName>
    <label>契約終期入力</label>
    <type>Date</type>
</CustomField>