force-app/main/default/objects/Seal__c/fields/ContractEndDateResult__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDateResult__c</fullName>
    <label>契約終期結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
            <value>
                <fullName>未記載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>