force-app/main/default/objects/Seal__c/fields/ContractReturnAddress__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnAddress__c</fullName>
    <label>契約書返却先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>