force-app/main/default/objects/Seal__c/fields/ContractReturnDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnDesiredDate__c</fullName>
    <label>契約書返却希望日</label>
    <type>Date</type>
</CustomField>