force-app/main/default/objects/Seal__c/fields/DecisionApplication2__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplication2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>捺印管理</relationshipLabel>
    <relationshipName>SealApplicationDecisionApplication2Relat</relationshipName>
    <type>Lookup</type>
</CustomField>