force-app/main/default/objects/Seal__c/fields/DeliveryAddressName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送付先名称</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SealApplicationAccountRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>