force-app/main/default/objects/Seal__c/fields/DocumentSendingDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentSendingDate__c</fullName>
    <label>書類発送日</label>
    <type>Date</type>
</CustomField>