force-app/main/default/objects/Seal__c/fields/ExclusiveAreaInput__c.field-meta.xml
<CustomField>
    <fullName>ExclusiveAreaInput__c</fullName>
    <label>専有面積入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>