force-app/main/default/objects/Seal__c/fields/FirstDocumentReturnDate__c.field-meta.xml
<CustomField>
    <fullName>FirstDocumentReturnDate__c</fullName>
    <label>初回書類返送日</label>
    <type>Date</type>
</CustomField>