force-app/main/default/objects/Seal__c/fields/GarageInput__c.field-meta.xml
<CustomField>
    <fullName>GarageInput__c</fullName>
    <label>駐車場入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>