force-app/main/default/objects/Seal__c/fields/GarageResult__c.field-meta.xml
<CustomField>
    <fullName>GarageResult__c</fullName>
    <label>駐車場結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
            <value>
                <fullName>未記載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>