force-app/main/default/objects/Seal__c/fields/IsCollectCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCollectCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回収完了フラグ</label>
    <type>Checkbox</type>
</CustomField>