force-app/main/default/objects/Seal__c/fields/IsReturnReminderStandBy__c.field-meta.xml
<CustomField>
    <fullName>IsReturnReminderStandBy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>返送督促待機フラグ</label>
    <type>Checkbox</type>
</CustomField>