force-app/main/default/objects/Seal__c/fields/LenderNameInput__c.field-meta.xml
<CustomField>
    <fullName>LenderNameInput__c</fullName>
    <label>貸主名入力</label>
    <length>255</length>
    <type>Text</type>
</CustomField>