force-app/main/default/objects/Seal__c/fields/LenderProxyInput__c.field-meta.xml
<CustomField>
    <fullName>LenderProxyInput__c</fullName>
    <label>貸主代理入力</label>
    <length>255</length>
    <type>Text</type>
</CustomField>