force-app/main/default/objects/Seal__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipName>SealApplicationNewMatterRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>