force-app/main/default/objects/Seal__c/fields/NewBeforeConclusionCheckCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>NewBeforeConclusionCheckCompletedDate__c</fullName>
    <label>新規_締結前チェック完了日</label>
    <type>Date</type>
</CustomField>