force-app/main/default/objects/Seal__c/fields/NotReflectedCorrespondenceConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>NotReflectedCorrespondenceConfirmDate__c</fullName>
    <label>未反映対応方法確認日</label>
    <type>Date</type>
</CustomField>