force-app/main/default/objects/Seal__c/fields/NotReflectedIs__c.field-meta.xml
<CustomField>
    <fullName>NotReflectedIs__c</fullName>
    <label>未反映有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>