force-app/main/default/objects/Seal__c/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>捺印管理</relationshipLabel>
    <relationshipName>SealApplicationRealEstateRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>