force-app/main/default/objects/Seal__c/fields/ReminderMemo__c.field-meta.xml
<CustomField>
    <fullName>ReminderMemo__c</fullName>
    <label>督促メモ</label>
    <type>TextArea</type>
</CustomField>