force-app/main/default/objects/Seal__c/fields/ReminderUnavailableMemo__c.field-meta.xml
<CustomField>
    <fullName>ReminderUnavailableMemo__c</fullName>
    <label>督促不可メモ</label>
    <type>TextArea</type>
</CustomField>