force-app/main/default/objects/Seal__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新</label>
    <referenceTo>Renewal__c</referenceTo>
    <relationshipName>SealApplicationRenewalRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>