force-app/main/default/objects/Seal__c/fields/RenewalFeeInput__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeInput__c</fullName>
    <label>更新料入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>