force-app/main/default/objects/Seal__c/fields/ScanCopyCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>ScanCopyCompletedDate__c</fullName>
    <label>scan/copy完了日</label>
    <type>Date</type>
</CustomField>