force-app/main/default/objects/Seal__c/fields/SpecialContract2Check__c.field-meta.xml
<CustomField>
    <fullName>SpecialContract2Check__c</fullName>
    <label>特約２チェック</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>未チェック</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>