force-app/main/default/objects/Seal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>決裁取得待ち</fullName>
            </value>
            <value>
                <fullName>契約書類待ち</fullName>
            </value>
            <value>
                <fullName>受領済み</fullName>
            </value>
            <value>
                <fullName>内容確認中</fullName>
            </value>
            <value>
                <fullName>締結中</fullName>
            </value>
            <value>
                <fullName>締結完了</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>借主控え待ち</fullName>
                <isActive>false</isActive>
                <label>借主控え待ち</label>
            </value>
            <value>
                <fullName>書類待ち</fullName>
                <isActive>false</isActive>
                <label>書類待ち</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>