force-app/main/default/objects/Seal__c/recordTypes/Cancel.recordType-meta.xml
<RecordType>
    <fullName>Cancel</fullName>
    <active>true</active>
    <label>解約</label>
</RecordType>