force-app/main/default/objects/Seal__c/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <label>ケース</label>
</RecordType>