force-app/main/default/objects/Seal__c/recordTypes/ConditionChange.recordType-meta.xml
<RecordType>
    <fullName>ConditionChange</fullName>
    <active>true</active>
    <label>条件変更</label>
</RecordType>