force-app/main/default/objects/Seal__c/recordTypes/NewMatter.recordType-meta.xml
<RecordType>
    <fullName>NewMatter</fullName>
    <active>true</active>
    <label>新規</label>
</RecordType>