force-app/main/default/objects/Seal__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <label>更新</label>
</RecordType>