force-app/main/default/objects/Seal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>New__c</columns>
    <columns>IsStorageReminderStandBy__c</columns>
    <columns>IsReturnReminderStandBy__c</columns>
    <columns>isFaxFlow__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>