force-app/main/default/objects/Seal__c/listViews/CancelSealApplication_Seal.listView-meta.xml
<ListView>
    <fullName>CancelSealApplication_Seal</fullName>
    <filterScope>Queue</filterScope>
    <label>解約捺印申請チーム</label>
    <queue>CancelSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>