force-app/main/default/objects/Seal__c/listViews/ChangeSealApplication_Seal.listView-meta.xml
<ListView>
    <fullName>ChangeSealApplication_Seal</fullName>
    <filterScope>Queue</filterScope>
    <label>入替捺印申請チーム</label>
    <queue>ChangeSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>