force-app/main/default/objects/Seal__c/listViews/RenewalSealApplication_Seal.listView-meta.xml
<ListView>
    <fullName>RenewalSealApplication_Seal</fullName>
    <filterScope>Queue</filterScope>
    <label>更新捺印申請チーム</label>
    <queue>RenewalSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>