force-app/main/default/objects/Seal__c/listViews/RunningSeal.listView-meta.xml
<ListView>
    <fullName>RunningSeal</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <label>進行中の捺印管理（検索用）</label>
</ListView>